muduotest 修改成 robot

--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(muduotest
+add_executable(robot
   Main.cc
   )
-target_link_libraries(muduotest muduo_net muduo_base)
+target_link_libraries(robot muduo_net muduo_base)
