一个可以编译通过的工程

--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -1,4 +1,11 @@
 add_executable(robot
   Main.cc
+  Client.cc
+  Robot.cc
+  RobotCmd.cc
+  RobotHandler.cc
+  Opcodes.cc
+  
+#    pp.cc
   )
 target_link_libraries(robot muduo_net muduo_base)
