增加消息目录 common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ set(CXX_FLAGS
   -pthread
   -lmuduo_net
   -lmuduo_base
+  -lreadline
+  -lncurses
   # -MMD
   # -std=c++0x
   -rdynamic
@@ -38,12 +40,13 @@ string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 set(PROJECT_BINARY_DIR ${BINARY_DIR})
 set(CMAKE_CURRENT_SOURCE_DIR ${SOURCE_DIR})
 set(CMAKE_CXX_COMPILER "g++")
-set(CMAKE_CXX_FLAGS_DEBUG "-O0")
-set(CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -D__NOTRANS__")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG -D__NOTRANS__")
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 INCLUDE_DIRECTORIES(${SOURCE_DIR}/src)
+INCLUDE_DIRECTORIES(${SOURCE_DIR}/src/common)
 LINK_DIRECTORIES(${SOURCE_DIR}/lib)
 
 string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
