增加 __SGROBOT__ 编译选项

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 set(CXX_FLAGS
   -g
-  # -DVALGRIND
+  -D__SGROBOT__
   # -DMUDUO_STD_STRING
   -DCHECK_PTHREAD_RETURN_VALUE
   -D_FILE_OFFSET_BITS=64
