通用的方法加载.cc文件

--- a/src/robot/CMakeLists.txt
+++ b/src/robot/CMakeLists.txt
@@ -1,11 +1,7 @@
+file(GLOB_RECURSE sources_All *.cc)
+									 
 add_executable(robot
-  Main.cc
-  Client.cc
-  Robot.cc
-  RobotCmd.cc
-  RobotHandler.cc
-  Opcodes.cc
-  Sessions.cc
-  Cmd.cc
+	${sources_All}
   )
+
 target_link_libraries(robot muduo_net_cpp11 muduo_base_cpp11)
